# autogpt_platform/frontend/src/app/api/openapi.json
@@ -5788,6 +5788,10 @@
           "is_latest_version": {
             "type": "boolean",
             "title": "Is Latest Version"
+          },
+          "is_favorite": {
+            "type": "boolean",
+            "title": "Is Favorite"
           }
         },
         "type": "object",
@@ -5808,7 +5812,8 @@
           "has_external_trigger",
           "new_output",
           "can_access_graph",
-          "is_latest_version"
+          "is_latest_version",
+          "is_favorite"
         ],
         "title": "LibraryAgent",
         "description": "Represents an agent in the library, including metadata for display and\nuser interaction within the system."
